AI Title: Fix interface on mobile viewport

--- a/projects/plugins/jetpack/extensions/plugins/ai-assistant-plugin/components/modal/style.scss
+++ b/projects/plugins/jetpack/extensions/plugins/ai-assistant-plugin/components/modal/style.scss
@@ -6,7 +6,6 @@
 	&__content {
 		display: flex;
 		flex-direction: column;
-		width: 100vw;
 	}
 
 	&__header {
